popovers: cancel button disable appearance issue solved
The "Cancel" button of dialog widget gets functionally disabled whenever the changes are saved, but in light theme, it doesn't look disabled visually when it should be, it is probably a CSS styling bug.
The issue has been solved by adding disabled css for the required button.

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -6,6 +6,7 @@
     --color-exit-button-border: hsl(300deg 2% 11% / 30%);
     --color-exit-button-background: hsl(0deg 0% 100%);
     --color-exit-button-background-interactive: hsl(0deg 0% 97%);
+    --color-exit-button-background-disabled: hsl(0deg 0% 90%);
 }
 
 .modal__overlay {
@@ -143,6 +144,10 @@
 
     &:hover {
         background: var(--color-exit-button-background-interactive);
+    }
+
+    &:disabled {
+        background: var(--color-exit-button-background-disabled);
     }
 }
 
